--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 /* 1. Global
 ================================================ */
 
+* {
+    padding: 0;
+    margin: 0;
+}
+
 html {
     font-size: 16px;
 }
@@ -16,12 +21,29 @@ html {
 /* 2. Typography
 ================================================ */
 
-h1, h2, h3, p, .btn {
+h1, h2, h3, p, label, .btn {
+    margin: 0.5rem;
     font-family:Arial, Helvetica, sans-serif;
 }
 
 /* 3. Structure
 ================================================ */
+
+.container {
+    display: flex;
+}
+
+.header {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    background-color: hsl(150, 25%, 75%);
+}
+
+.footer {
+    padding: 1rem;
+    margin-top: 1rem;
+    background-color: hsl(150, 25%, 75%);
+}
 
 /* 4. Components
 ================================================ */
@@ -34,6 +56,12 @@ h1, h2, h3, p, .btn {
 .btn {
     border-radius: 0.5rem;
     padding: 0.5rem;
+    cursor: pointer;
+    background-color: white;
+}
+.btn:hover {
+    color: white;
+    background-color: hsl(150, 25%, 25%);
 }
 
 /* 5. Responsive
