--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ h1, h2, h3, p, label, .btn {
     padding: 1rem;
     margin-top: 1rem;
     background-color: hsl(150, 25%, 75%);
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 /* 4. Components
