--- a/style.css
+++ b/style.css
@@ -31,6 +31,19 @@ h1, h2, h3, p, label, .btn {
 
 .container {
     display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    height: 50vh;
+    flex-wrap: wrap;
+}
+
+.card {
+    border-radius: 0.5rem;
+    border: 0.25rem solid black;
+    box-shadow: 1rem 1rem;
+    width: 25rem;
+    height: 8rem;
 }
 
 .header {
