--- a/style.css
+++ b/style.css
@@ -21,9 +21,30 @@ html {
 /* 2. Typography
 ================================================ */
 
-h1, h2, h3, p, label, .btn {
-    margin: 0.5rem;
+h1, h2, h3, p, label, .btn, .text {
+    line-height: 1.5rem;
+    margin-left: 0.75rem;
     font-family:Arial, Helvetica, sans-serif;
+}
+
+.text {
+    padding: 0.5rem 0.5rem;
+}
+
+.answer {
+    text-align: center;
+    width: 80%;
+    margin: 1rem auto;
+}
+
+.correct {
+    color: hsl(150, 50%, 30%);
+    background-color: hsl(150, 50%, 80%);
+}
+
+.incorrect {
+    color: hsl(10, 50%, 30%);
+    background-color: hsl(10, 50%, 80%);
 }
 
 /* 3. Structure
@@ -31,31 +52,48 @@ h1, h2, h3, p, label, .btn {
 
 .container {
     display: flex;
-    justify-content: center;
-    align-content: center;
+    justify-content: space-around;
+    align-content: space-around;
     width: 100%;
-    height: 50vh;
     flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.height50 {
+    height: 50vh;
+}
+
+.instructions-card {
+    border-radius: 0.5rem;
+    border: 0.25rem solid black;
+    box-shadow: 0.5rem 0.5rem;
+    width: 20rem;
+    height: 13rem;
 }
 
 .card {
     border-radius: 0.5rem;
     border: 0.25rem solid black;
-    box-shadow: 1rem 1rem;
-    width: 25rem;
+    box-shadow: 0.5rem 0.5rem;
+    width: 22rem;
     height: 8rem;
+    margin: 3rem;
 }
 
 .header {
     padding: 1rem;
     margin-bottom: 1rem;
-    background-color: hsl(150, 25%, 75%);
+
+    color: white;
+    background-color: black;
 }
 
 .footer {
     padding: 1rem;
     margin-top: 1rem;
-    background-color: hsl(150, 25%, 75%);
+
+    color: white;
+    background-color: black;
 
     position: absolute;
     bottom: 0;
@@ -74,11 +112,15 @@ h1, h2, h3, p, label, .btn {
     border-radius: 0.5rem;
     padding: 0.5rem;
     cursor: pointer;
+
+    color: black;
     background-color: white;
+
+    box-shadow: 0.25rem 0.25rem;
 }
 .btn:hover {
     color: white;
-    background-color: hsl(150, 25%, 25%);
+    background-color: black;
 }
 
 /* 5. Responsive
