Client side javascript test complete

--- a/express-server/views/landingPage.html
+++ b/express-server/views/landingPage.html
@@ -8,6 +8,10 @@
     <body>
 
         <h1>Hello</h1>
+
+        <p>Copyright <span id="date"></span></p>
         
     </body>
+
+    <script src="displayYear.js" type="module"></script>
 </html>
