Styling added successfully

--- a/express-server/views/landingPage.html
+++ b/express-server/views/landingPage.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+
+        <meta charset="UTF-8" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="icon" href="icons/bytesized-orange.png" />
+
+        <link rel="stylesheet" href="styles/global.css" />
+
+        <link rel="stylesheet" href="styles/components.css" />
+
+        <title>Bytesized Math</title>
+
     </head>
+
     <body>
 
-        <h1>Hello</h1>
+        <main>
 
-        <p>Copyright <span id="date"></span></p>
+            <header class="flex">
+
+                <h2>Bytesized Math</h2>
+
+                <button>Get Started</button>
+
+            </header>
+
+            <p>Copyright <span id="date"></span></p>
+
+        </main>
         
     </body>
 
     <script src="displayYear.js" type="module"></script>
+
 </html>
