Initial pages directory created

--- a/express-server/views/pages/static/landingPage.html
+++ b/express-server/views/pages/static/landingPage.html
@@ -29,7 +29,27 @@
 
             </header>
 
-            <p>Copyright <span id="date"></span></p>
+            <section class="flex space-around">
+
+                <div class="image-container"></div>
+
+                <div class="text-container">
+
+                    <h1>Making Math Fun</h1>
+
+                    <p>
+                        With Bytesized Math, you can 
+                    </p>
+
+                </div>
+
+            </section>
+
+            <footer>
+
+                <p>Copyright <span id="date"></span></p>
+
+            </footer>
 
         </main>
         
