--- a/express-server/views/styles/global.css
+++ b/express-server/views/styles/global.css
@@ -1,11 +1,23 @@
 * {
 
     font-family: Arial, Helvetica, sans-serif;
-    
+
 }
 
 .flex {
 
     display: flex;
+
+}
+
+.space-around {
+
+    justify-content: space-around;
+
+}
+
+section {
+
+    width: 100vw;
 
 }
