--- a/express-server/views/pages/dashboard/leaderboard.html
+++ b/express-server/views/pages/dashboard/leaderboard.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Admin | Bytesized Math</title>
+        <title>Leaderboard | Bytesized Math</title>
     </head>
 
     <body>
 
-        <h1>Admin</h1>
+        <h1>Leaderboard</h1>
         
     </body>
 
