--- a/express-server/views/pages/dashboard/mathGame.html
+++ b/express-server/views/pages/dashboard/mathGame.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Math Game | Bytesized Math</title>
+    </head>
+
+    <body>
+
+        <h1>Math Game</h1>
+        
+    </body>
 </html>
