Lessons router added

--- a/express-server/views/pages/static/landingPage.html
+++ b/express-server/views/pages/static/landingPage.html
@@ -19,15 +19,19 @@
 
     <body>
 
-        <main>
+        <header class="flex">
 
-            <header class="flex">
+            <h2>Bytesized Math</h2>
 
-                <h2>Bytesized Math</h2>
+            <a href="/dashboard">
 
                 <button>Get Started</button>
 
-            </header>
+            </a>
+
+        </header>
+
+        <main> 
 
             <section class="flex space-around">
 
@@ -45,13 +49,23 @@
 
             </section>
 
-            <footer>
+            <section>
 
-                <p>Copyright <span id="date"></span></p>
+                <a href="/dashboard">
 
-            </footer>
+                    <button>Get Started Today</button>
+
+                </a>
+                
+            </section>
 
         </main>
+
+        <footer>
+
+            <p>Copyright <span id="date"></span></p>
+
+        </footer>
         
     </body>
 
