Footer links on landing page

--- a/express-server/views/pages/static/landingPage.html
+++ b/express-server/views/pages/static/landingPage.html
@@ -9,9 +9,12 @@
 
         <link rel="icon" href="icons/bytesized-orange.png" />
 
+        <!-- Styles -->
         <link rel="stylesheet" href="styles/global.css" />
 
         <link rel="stylesheet" href="styles/components.css" />
+
+        <link rel="stylesheet" href="styles/typography.css" />
 
         <title>Bytesized Math</title>
 
@@ -56,12 +59,76 @@
                     <button>Get Started Today</button>
 
                 </a>
-                
+
             </section>
 
         </main>
 
         <footer>
+
+            <nav class="flex space-around">
+
+                <div>
+
+                    <h3>Organization</h3>
+
+                    <ul>
+
+                        <li>
+
+                            <a href="/about">About</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h3>Resources</h3>
+
+                    <ul>
+
+                        <li>
+
+                            <a href="/lessons">Lessons</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="/blog">Blog</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+                <div>
+
+                    <h3>Policies</h3>
+
+                    <ul>
+
+                        <li>
+
+                            <a href="https://bytesizedcrew.com/terms-of-service" target="_blank" rel="noreferrer">Terms of Service</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="https://bytesizedcrew.com/privacy-policy" target="_blank" rel="noreferrer">Privacy Policy</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </nav>
 
             <p>Copyright <span id="date"></span></p>
 
