--- a/express-server/views/public/styles/components.css
+++ b/express-server/views/public/styles/components.css
@@ -21,3 +21,21 @@ button {
     border: 0.1rem solid black;
 
 }
+
+nav {
+
+    width: 100%;
+
+}
+
+footer {
+
+    background-color: hsl( 150, 50%, 80% );
+
+    margin: 1rem;
+
+    padding: 1rem;
+
+    border-radius: 0.5rem;
+
+}
