Next app created

--- a/express-server/views/public/styles/typography.css
+++ b/express-server/views/public/styles/typography.css
@@ -3,3 +3,13 @@ nav * {
     list-style: none;
 
 }
+
+h1 {
+
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+}
+
+.text-container {
+    
+}
